--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <div class="max-w-6xl mx-auto">
 <div class="demo-placeholder rounded-2xl p-8 md:p-12 text-center">
                 <div class="text-gray-500 text-lg mb-4">Demo Preview</div>
-                <img src="Screenshot 2025-11-26 at 1.12.43 PM.png" alt="Codag Demo" class="rounded-xl border border-gray-800 w-full">
+                <img src="demo.png" alt="Codag Demo" class="rounded-xl border border-gray-800 w-full">
             </div>
         </div>
     </section>
