--- a/index.html
+++ b/index.html
@@ -27,9 +27,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <style>
+        html {
+            background-color: #0d0d0f;
+        }
+
         body {
-            background-color: #0a0a0a;
+            background: transparent;
             font-family: 'Inter', system-ui, sans-serif;
+            position: relative;
+            z-index: 1;
+        }
+
+        #particles {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: -1;
+            pointer-events: none;
+            filter: blur(8px);
         }
 
         .gradient-text {
@@ -46,7 +62,7 @@
         }
 
         .gradient-border-inner {
-            background: #0a0a0a;
+            background: #0d0d0f;
             border-radius: 9999px;
         }
 
@@ -85,6 +101,8 @@
     </style>
 </head>
 <body class="text-white min-h-screen">
+    <canvas id="particles"></canvas>
+
     <!-- Logo - Top Left -->
     <a href="#" class="fixed top-6 left-6 z-50">
         <img src="codag.svg" alt="Codag" class="h-8 md:h-10 invert">
@@ -102,6 +120,11 @@
                 <li>
                     <a href="#demo" class="px-5 py-2 rounded-full text-sm font-medium text-gray-400 hover:text-white hover:bg-white/10 transition-colors block">
                         Demo
+                    </a>
+                </li>
+                <li>
+                    <a href="#about" class="px-5 py-2 rounded-full text-sm font-medium text-gray-400 hover:text-white hover:bg-white/10 transition-colors block">
+                        About
                     </a>
                 </li>
                 <li>
@@ -200,7 +223,7 @@
     </section>
 
     <!-- Features Section -->
-    <section class="px-6 py-24 bg-gradient-to-b from-transparent to-gray-900/20">
+    <section class="px-6 py-24">
         <div class="max-w-6xl mx-auto">
             <h2 class="text-4xl md:text-5xl font-bold text-center mb-16 fade-in">
                 Everything you need to <span class="gradient-text">understand</span> your AI code
@@ -251,6 +274,25 @@
                     <p class="text-gray-400">Highlights the longest execution route to identify bottlenecks.</p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="px-6 py-24">
+        <div class="max-w-4xl mx-auto text-left">
+            <h2 class="text-4xl md:text-5xl font-bold mb-6 fade-in">About <span class="gradient-text">Codag</span></h2>
+            <p class="text-gray-300 text-xl mb-8 fade-in">
+                <span class="gradient-text font-semibold">Co</span>mpound <span class="gradient-text font-semibold">D</span>irected <span class="gradient-text font-semibold">A</span>cyclic <span class="gradient-text font-semibold">G</span>raphs
+            </p>
+            <p class="text-gray-400 text-lg mb-8 fade-in">
+                Codag is built for developers who work with AI. As LLM integrations become more complex,
+                understanding how data flows through your AI systems becomes critical. We're building tools
+                to help you visualize, debug, and optimize your AI workflows—all from within your IDE.
+            </p>
+            <p class="text-gray-400 text-lg fade-in">
+                Whether you're building RAG pipelines, multi-agent systems, or simple chat applications,
+                Codag helps you see the big picture and dive into the details when you need to.
+            </p>
         </div>
     </section>
 
