--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
         <div class="bg-gray-900/95 backdrop-blur-md border border-gray-800 rounded-2xl p-2 min-w-[160px]">
             <ul class="flex flex-col gap-1">
                 <li>
-                    <a href="#waitlist" class="mobile-nav-link px-4 py-3 rounded-xl text-sm font-medium text-gray-400 transition-colors block">
-                        Waitlist
+                    <a href="#get-started" class="mobile-nav-link px-4 py-3 rounded-xl text-sm font-medium text-gray-400 transition-colors block">
+                        Get Started
                     </a>
                 </li>
                 <li>
@@ -216,8 +216,8 @@
         <div class="bg-gray-900/80 backdrop-blur-md border border-gray-800 rounded-full px-2 py-2">
             <ul class="flex items-center gap-1">
                 <li>
-                    <a href="#waitlist" class="px-5 py-2 rounded-full text-sm font-medium text-white bg-white/10 hover:bg-white/20 transition-colors block">
-                        Waitlist
+                    <a href="#get-started" class="px-5 py-2 rounded-full text-sm font-medium text-white bg-white/10 hover:bg-white/20 transition-colors block">
+                        Get Started
                     </a>
                 </li>
                 <li>
@@ -240,7 +240,7 @@
     </nav>
 
     <!-- Hero Section - Centered on viewport -->
-    <section id="waitlist" class="min-h-screen flex flex-col justify-center items-center px-4 sm:px-6 py-16 sm:py-20">
+    <section id="get-started" class="min-h-screen flex flex-col justify-center items-center px-4 sm:px-6 py-16 sm:py-20">
         <div class="text-center">
                 <!-- Mobile Logo (above heading) -->
                 <img src="codag.svg" alt="Codag" class="h-16 mx-auto mb-6 invert md:hidden">
@@ -253,26 +253,18 @@
                     Works with Claude Code, Cursor, and Copilot.
                 </p>
 
-                <!-- Waitlist Form -->
-                <form id="waitlist-form" class="max-w-md mx-auto mt-8">
-                    <div class="flex flex-col sm:flex-row items-stretch sm:items-center gap-3 sm:gap-0 bg-gray-900 border border-gray-700 rounded-2xl sm:rounded-full p-3 sm:p-1.5 focus-within:border-purple-500 focus-within:ring-1 focus-within:ring-purple-500">
-                        <input
-                            type="email"
-                            id="email"
-                            name="email"
-                            placeholder="Enter your email"
-                            required
-                            class="flex-1 px-4 py-2 bg-transparent text-white placeholder-gray-500 focus:outline-none text-center sm:text-left"
-                        >
-                        <button
-                            type="submit"
-                            class="px-6 py-3 sm:py-2 rounded-full bg-gradient-to-r from-purple-500 to-blue-500 text-white font-semibold hover:opacity-90 transition-opacity whitespace-nowrap"
-                        >
-                            Join Waitlist
-                        </button>
-                    </div>
-                    <p id="form-message" class="mt-4 text-sm hidden"></p>
-                </form>
+                <!-- Install Buttons -->
+                <div class="flex flex-col sm:flex-row items-center justify-center gap-4 mt-8">
+                    <a href="https://marketplace.visualstudio.com/items?itemName=codag.codag"
+                       class="px-8 py-3 rounded-full bg-gradient-to-r from-purple-500 to-blue-500 text-white font-semibold hover:opacity-90 transition-opacity whitespace-nowrap text-base">
+                        Install Extension
+                    </a>
+                    <a href="https://github.com/michaelzixizhou/codag"
+                       class="px-8 py-3 rounded-full border border-gray-700 text-white font-semibold hover:bg-white/10 transition-colors whitespace-nowrap text-base flex items-center gap-2">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+                        GitHub
+                    </a>
+                </div>
 
                 <!-- Supported Providers - Infinite Carousel -->
                 <div class="mt-8 md:mt-12">
@@ -395,7 +387,7 @@
                     </div>
                 </div>
 
-                <p class="text-gray-500 text-xs mt-6">VSCode Extension. Coming Soon.</p>
+                <p class="text-gray-500 text-xs mt-6">Available now on the VS Code Marketplace.</p>
         </div>
     </section>
 
