--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codag - Map Your LLM Workflows</title>
-    <meta name="description" content="The visual component of agentic coding. See your AI workflows in real-time as you build with Claude Code, Cursor, and Copilot.">
+    <meta name="description" content="Visualize and share your LLM workflows from your codebase.">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
+    <!-- Open Graph / Link Preview -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Codag - Map Your LLM Workflows">
+    <meta property="og:description" content="Visualize and share your LLM workflows from your codebase.">
+    <meta property="og:image" content="https://codag.ai/socialpreview.png">
+    <meta property="og:url" content="https://codag.ai">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Codag - Map Your LLM Workflows">
+    <meta name="twitter:description" content="Visualize and share your LLM workflows from your codebase.">
+    <meta name="twitter:image" content="https://codag.ai/socialpreview.png">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
