--- a/index.html
+++ b/index.html
@@ -360,6 +360,16 @@
                 </div>
 
                 <p class="text-gray-500 text-xs mt-6">Available now on the VS Code Marketplace.</p>
+
+                <!-- Trusted By -->
+                <div class="mt-10 md:mt-14">
+                    <p class="text-gray-500 text-xs uppercase tracking-widest mb-4">Trusted by</p>
+                    <div class="flex items-center justify-center gap-6">
+                        <a href="https://orch.so/" target="_blank" rel="noopener noreferrer" class="hover:opacity-80 transition-opacity">
+                            <img src="logos/orch-logo.svg" alt="Orchestra" class="h-10">
+                        </a>
+                    </div>
+                </div>
         </div>
     </section>
 
