--- a/index.html
+++ b/index.html
@@ -84,10 +84,8 @@
 
         /* ---- Circuit canvas background ---- */
         #circuit-bg {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
+            position: fixed;
+            inset: 0;
             z-index: 0;
             pointer-events: none;
         }
